[workspace]
members = ["dump-analyzer", "near-rust-allocator-proxy"]

[profile.bench]
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
lto = true
overflow-checks = true

[profile.release]
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
lto = true # Enable full link-time optimization.
overflow-checks = true
