[package]
name = "near-memory-tracker"
version = "0.1.0"
authors = ["Piotr Mikulski <piotr@near.org>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
libc = "0.2.65"
backtrace = "0.3"
arr_macro = "0.1.3"
log = "0.4"
tracing = "0.1.13"
futures = "0.3.1"
jemalloc-ctl = "0.3.3"
jemalloc-sys = "0.3.2"
jemallocator = { version = "0.3"  }


