[package]
name = "near-rust-allocator-proxy"
version = "0.4.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Piotr Mikulski <piotr@near.org>"]
description = "Rust allocator proxy with added header"
readme = "README.md"
keywords = ["memory", "tracker", "allocation", "header"]
repository = "https://github.com/near/near-memory-tracker"
license = "Apache-2.0"
categories = ["memory-management"]
edition = "2021"

[dependencies]
backtrace = "0.3"
nix = ">=0.15,<=0.23"
tracing = "0.1.13"
once_cell = "1"

[dev-dependencies]
criterion = "0.3.5"
tikv-jemallocator = "0.4.1"
tracing-subscriber = "0.3.3"

[[bench]]
name = "allocations"
harness = false
