[package]
name = "near-rust-allocator-proxy"
version = "0.5.0"
authors = [
    "Near Inc <hello@nearprotocol.com>",
    "Piotr Mikulski <piotr@near.org>",
]
edition = "2021"
description = "Rust allocator proxy with added header"
readme = "README.md"
repository = "https://github.com/near/near-memory-tracker"
license = "Apache-2.0"
keywords = ["allocation", "header", "memory", "tracker"]
categories = ["memory-management"]

[dependencies]
backtrace = "0.3"
nix = ">=0.15,<=0.23"
tracing = "0.1.13"

[dev-dependencies]
criterion = "0.3.5"
serial_test = "0.5.1"
tikv-jemallocator = "0.5"
tracing-subscriber = "0.3.3"

[[bench]]
name = "allocations"
harness = false
