[package]
name = "rust-memory-analyzer"
version = "0.1.0"
authors = [
    "Near Inc <hello@nearprotocol.com>",
    "Piotr Mikulski <piotr@near.org>",
]
edition = "2021"
description = "Rust memory analyzer"
readme = "README.md"
repository = "https://github.com/near/near-memory-tracker"
license = "Apache-2.0"
keywords = ["allocation", "header", "memory", "tracker"]
categories = ["memory-management"]

[dependencies]
anyhow = "1.0.51"
clap = "=3.0.0-rc.7"
clap_derive = "=3.0.0-rc.7"
itertools = { version = "0.10.3", features = ["use_alloc", "use_std"] }
near-rust-allocator-proxy = "0.4.0"
nix = "0.23.1"
rustc-demangle = "=0.1.21"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
